config client usage

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=config-server
-server.port=7001
+server.port=${random.int[7001,7100]}
+# ----------------------
+# ----- 服务注册中心 -----
+# ----------------------
+eureka.client.serviceUrl.defaultZone=http://localhost:8001/eureka/
+# ----------------------
+# -----配置中心git仓库-----
+# ----------------------
 spring.cloud.config.server.git.uri=https://github.com/withcourageto/spring-cloud-config.git
 spring.cloud.config.server.git.username=withcourageto
 spring.cloud.config.server.git.password=Lideng19900911
