--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+
+                <configuration>
+                    <jvmArguments>--add-modules java.xml.bind</jvmArguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
