--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.application.name=user-service
-server.port=8101
-eureka.client.serviceUrl.defaultZone=http://localhost:8001/eureka/
+management.security.enabled=false
